--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,10 +28,12 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t erickcast98/docker-graphql:0.0.2 .
+        docker build -t erickcast98/docker-graphql:latest .
 
     - name: Push Docker Image
       run: |
         docker push erickcast98/docker-graphql:0.0.2
+        docker push erickcast98/docker-graphql:latest
     
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
