--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,14 +37,14 @@ jobs:
       env:
         NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
-        docker build -t erickcast98/docker-graphql:#NEW_VERSION .
+        docker build -t erickcast98/docker-graphql:$NEW_VERSION .
         docker build -t erickcast98/docker-graphql:latest .
 
     - name: Push Docker Image
       env:
           NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
-        docker push erickcast98/docker-graphql:#NEW_VERSION
+        docker push erickcast98/docker-graphql:$NEW_VERSION
         docker push erickcast98/docker-graphql:latest
     
     # - name: Build the Docker image
